// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.ads.admanager.v1;

import "google/ads/admanager/v1/contact_messages.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";

option csharp_namespace = "Google.Ads.AdManager.V1";
option go_package = "google.golang.org/genproto/googleapis/ads/admanager/v1;admanager";
option java_multiple_files = true;
option java_outer_classname = "ContactServiceProto";
option java_package = "com.google.ads.admanager.v1";
option php_namespace = "Google\\Ads\\AdManager\\V1";
option ruby_package = "Google::Ads::AdManager::V1";

// Provides methods for handling `Contact` objects.
service ContactService {
  option (google.api.default_host) = "admanager.googleapis.com";
  option (google.api.oauth_scopes) =
      "https://www.googleapis.com/auth/admanager";

  // API to retrieve a `Contact` object.
  rpc GetContact(GetContactRequest) returns (Contact) {
    option (google.api.http) = {
      get: "/v1/{name=networks/*/contacts/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // API to retrieve a list of `Contact` objects.
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=networks/*}/contacts"
    };
    option (google.api.method_signature) = "parent";
  }

  // API to create a `Contact` object.
  rpc CreateContact(CreateContactRequest) returns (Contact) {
    option (google.api.http) = {
      post: "/v1/{parent=networks/*}/contacts"
      body: "contact"
    };
    option (google.api.method_signature) = "parent,contact";
  }

  // API to batch create `Contact` objects.
  rpc BatchCreateContacts(BatchCreateContactsRequest)
      returns (BatchCreateContactsResponse) {
    option (google.api.http) = {
      post: "/v1/{parent=networks/*}/contacts:batchCreate"
      body: "*"
    };
    option (google.api.method_signature) = "parent,requests";
  }

  // API to update a `Contact` object.
  rpc UpdateContact(UpdateContactRequest) returns (Contact) {
    option (google.api.http) = {
      patch: "/v1/{contact.name=networks/*/contacts/*}"
      body: "contact"
    };
    option (google.api.method_signature) = "contact,update_mask";
  }

  // API to batch update `Contact` objects.
  rpc BatchUpdateContacts(BatchUpdateContactsRequest)
      returns (BatchUpdateContactsResponse) {
    option (google.api.http) = {
      post: "/v1/{parent=networks/*}/contacts:batchUpdate"
      body: "*"
    };
    option (google.api.method_signature) = "parent,requests";
  }
}

// Request object for `GetContact` method.
message GetContactRequest {
  // Required. The resource name of the Contact.
  // Format: `networks/{network_code}/contacts/{contact_id}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "admanager.googleapis.com/Contact"
    }
  ];
}

// Request object for `ListContacts` method.
message ListContactsRequest {
  // Required. The parent, which owns this collection of Contacts.
  // Format: `networks/{network_code}`
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "admanager.googleapis.com/Network"
    }
  ];

  // Optional. The maximum number of `Contacts` to return. The service may
  // return fewer than this value. If unspecified, at most 50 `Contacts` will be
  // returned. The maximum value is 1000; values greater than 1000 will be
  // coerced to 1000.
  int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];

  // Optional. A page token, received from a previous `ListContacts` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `ListContacts` must match
  // the call that provided the page token.
  string page_token = 3 [(google.api.field_behavior) = OPTIONAL];

  // Optional. Expression to filter the response.
  // See syntax details at
  // https://developers.google.com/ad-manager/api/beta/filters
  string filter = 4 [(google.api.field_behavior) = OPTIONAL];

  // Optional. Expression to specify sorting order.
  // See syntax details at
  // https://developers.google.com/ad-manager/api/beta/filters#order
  string order_by = 5 [(google.api.field_behavior) = OPTIONAL];

  // Optional. Number of individual resources to skip while paginating.
  int32 skip = 6 [(google.api.field_behavior) = OPTIONAL];
}

// Response object for `ListContactsRequest` containing matching `Contact`
// objects.
message ListContactsResponse {
  // The `Contact` objects from the specified network.
  repeated Contact contacts = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;

  // Total number of `Contact` objects.
  // If a filter was included in the request, this reflects the total number
  // after the filtering is applied.
  //
  // `total_size` won't be calculated in the response unless it has been
  // included in a response field mask. The response field mask can be provided
  // to the method by using the URL parameter `$fields` or `fields`, or by using
  // the HTTP/gRPC header `X-Goog-FieldMask`.
  //
  // For more information, see
  // https://developers.google.com/ad-manager/api/beta/field-masks
  int32 total_size = 3;
}

// Request object for `CreateContact` method.
message CreateContactRequest {
  // Required. The parent resource where this `Contact` will be created.
  // Format: `networks/{network_code}`
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "admanager.googleapis.com/Network"
    }
  ];

  // Required. The `Contact` to create.
  Contact contact = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request object for `BatchCreateContacts` method.
message BatchCreateContactsRequest {
  // Required. The parent resource where `Contacts` will be created.
  // Format: `networks/{network_code}`
  // The parent field in the CreateContactRequest must match this
  // field.
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "admanager.googleapis.com/Network"
    }
  ];

  // Required. The `Contact` objects to create.
  // A maximum of 100 objects can be created in a batch.
  repeated CreateContactRequest requests = 2
      [(google.api.field_behavior) = REQUIRED];
}

// Response object for `BatchCreateContacts` method.
message BatchCreateContactsResponse {
  // The `Contact` objects created.
  repeated Contact contacts = 1;
}

// Request object for `UpdateContact` method.
message UpdateContactRequest {
  // Required. The `Contact` to update.
  //
  // The `Contact`'s `name` is used to identify the `Contact` to update.
  Contact contact = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. The list of fields to update.
  google.protobuf.FieldMask update_mask = 2
      [(google.api.field_behavior) = REQUIRED];
}

// Request object for `BatchUpdateContacts` method.
message BatchUpdateContactsRequest {
  // Required. The parent resource where `Contacts` will be updated.
  // Format: `networks/{network_code}`
  // The parent field in the UpdateContactRequest must match this
  // field.
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "admanager.googleapis.com/Network"
    }
  ];

  // Required. The `Contact` objects to update.
  // A maximum of 100 objects can be updated in a batch.
  repeated UpdateContactRequest requests = 2
      [(google.api.field_behavior) = REQUIRED];
}

// Response object for `BatchUpdateContacts` method.
message BatchUpdateContactsResponse {
  // The `Contact` objects updated.
  repeated Contact contacts = 1;
}
